website/websites/gp4/code/mandelbrot-icc-4.log
BUILD COMMANDS FOR: mandelbrot.icc-4.icc

Tue Apr 22 15:55:06 PDT 2008

/opt/intel/cc/10.1.012/bin/icc  mandelbrot.icc-4.c -o mandelbrot.icc-4.icc_run
mandelbrot.icc-4.c(22): error: expression must have arithmetic type
      v2df nzero = -zero;
                    ^

mandelbrot.icc-4.c(37): error: expression must have a constant value
  	    v2df Crv = { 2*x/w-1.5, 2*(x+1.0)/w-1.5 };
  	                   ^

mandelbrot.icc-4.c(37): error: expression must have a constant value
  	    v2df Crv = { 2*x/w-1.5, 2*(x+1.0)/w-1.5 };
  	                     ^

mandelbrot.icc-4.c(37): warning #1368: excess initializers are ignored
  	    v2df Crv = { 2*x/w-1.5, 2*(x+1.0)/w-1.5 };
  	                            ^

mandelbrot.icc-4.c(38): error: expression must have a constant value
  	    v2df Civ = { 2*y/h-1.0, 2*y/h-1.0 };
  	                   ^

mandelbrot.icc-4.c(38): error: expression must have a constant value
  	    v2df Civ = { 2*y/h-1.0, 2*y/h-1.0 };
  	                     ^

mandelbrot.icc-4.c(38): warning #1368: excess initializers are ignored
  	    v2df Civ = { 2*y/h-1.0, 2*y/h-1.0 };
  	                            ^

mandelbrot.icc-4.c(46): error: expression must have arithmetic type
                  Ziv = (Zrv*Ziv) + (Zrv*Ziv) + Civ;
                         ^

mandelbrot.icc-4.c(46): error: expression must have arithmetic type
                  Ziv = (Zrv*Ziv) + (Zrv*Ziv) + Civ;
                             ^

mandelbrot.icc-4.c(46): error: expression must have arithmetic type
                  Ziv = (Zrv*Ziv) + (Zrv*Ziv) + Civ;
                                     ^

mandelbrot.icc-4.c(46): error: expression must have arithmetic type
                  Ziv = (Zrv*Ziv) + (Zrv*Ziv) + Civ;
                                         ^

mandelbrot.icc-4.c(47): error: expression must have arithmetic or pointer type
                  Zrv = Trv - Tiv + Crv;
                        ^

mandelbrot.icc-4.c(48): error: expression must have arithmetic type
                  Trv = Zrv * Zrv;
                        ^

mandelbrot.icc-4.c(48): error: expression must have arithmetic type
                  Trv = Zrv * Zrv;
                              ^

mandelbrot.icc-4.c(49): error: expression must have arithmetic type
                  Tiv = Ziv * Ziv;
                        ^

mandelbrot.icc-4.c(49): error: expression must have arithmetic type
                  Tiv = Ziv * Ziv;
                              ^

mandelbrot.icc-4.c(52): error: expression must have arithmetic or pointer type
  		v2df delta = four - Trv - Tiv;
  		             ^

mandelbrot.icc-4.c(53): error: expression must have integral type
  		mask = (v4si)delta & (v4si)nzero;
  		       ^

mandelbrot.icc-4.c(53): error: expression must have integral type
  		mask = (v4si)delta & (v4si)nzero;
  		                     ^

compilation aborted for mandelbrot.icc-4.c (code 2)
make[3]: [mandelbrot.icc-4.icc_run] Error 2 (ignored)

=================================================================
COMMAND LINE (%A is single numeric argument):

mandelbrot.icc-4.icc_run %A
Error, could not exec mandelbrot.icc-4.icc_run 120 (No such file or directory)
PATH=/home/dunham/gp4/shootout/bench/mandelbrot:/home/dunham/gp4/shootout/bench/mandelbrot/tmp:/opt/intel/cc/10.1.012/bin:/opt/intel/fc/10.1.012/bin:/usr/local/bin:/usr/bin:/bin:/opt/bin:/usr/i686-pc-linux-gnu/gcc-bin/4.1.2:/opt/sun-jdk-1.4.2.16/bin:/opt/sun-jdk-1.4.2.16/jre/bin:/opt/sun-jdk-1.4.2.16/jre/javaws:/usr/qt/3/bin:/usr/i686-pc-linux-gnu/gnat-gpl-bin/4.1:/usr/libexec/gnat-gpl/i686-pc-linux-gnu/4.1:/usr/games/bin:/opt/cint-5.16.19:/opt/kroc-1.4.0/install/bin:/opt/sun-jdk-1.6.0.06/bin:/opt/sun-jdk-1.4.2.16/bin:/opt/mozart/bin:/opt/groovy-1.5.4/bin:/opt/smlnj/bin:/usr/local/lib/squeak/3.9-8:/opt/stx:/opt/jruby-1.1b1/bin:/opt/Quark:/opt/gnat/bin
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
